# PythonLibraryUpdator

./: pyproject.toml
docs/: README.md
scripts/: PythonLibraryUpdator.py  main.py
src/: main.py
tests/: test_pythonlibraryupdator.py
