[tool.poetry]
name = "PythonLibraryUpdator"
version = "1.0.4"
description = ""
authors = ["shervinbdndev <shervin2234@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
colorama = ""

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
